tests/miniJava/neg/006189_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { true if ( 0 ) { } else { } } }
